Fix text alignment in post action element

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -32,6 +32,7 @@
 }
 
 @mixin post-action {
+  align-items: center;
   display: flex;
   font-weight: bold;
   margin: 0 $block-outer-padding $block-outer-padding / 2;
